k3s/websites/web-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: blog
  namespace: website
  labels:
    app: blog-test
    name: blog

spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog-test
      task: blog
  template:
    metadata:
      labels:
        app: blog-test
        task: blog
    spec:
      containers:
        - name: blog
          image: alteredtech/nginx-alteredtech
          ports:
            - containerPort: 80
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: resume
  namespace: website
  labels:
    app: resume-test
    name: resume

spec:
  replicas: 2
  selector:
    matchLabels:
      app: resume-test
      task: resume
  template:
    metadata:
      labels:
        app: resume-test
        task: resume
    spec:
      containers:
        - name: resume
          image: alteredtech/nginx-alteredtech-resume
          ports:
            - containerPort: 80
