k3s/websites/web-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: blog-svc
  namespace: website

spec:
  ports:
    - name: http
      port: 80
  selector:
    app: blog-test
    task: blog

---
apiVersion: v1
kind: Service
metadata:
  name: resume-svc
  namespace: website

spec:
  ports:
    - name: http
      port: 80
  selector:
    app: resume-test
    task: resume
