k3s/websites/web-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: website-ingress
  namespace: website
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
  - host: www.alteredtech.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: blog-svc
            port:
              number: 80
  - host: resume.alteredtech.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: resume-svc
            port:
              number: 80
